# aerostack2

as2_behaviors/as2_auction_behavior/: CMakeLists.txt  package.xml  plugins.xml
as2_behaviors/as2_auction_behavior/config/: config_default.yaml
as2_behaviors/as2_auction_behavior/include/as2_auction_behavior/: auction_behavior.hpp  auction_behavior_plugin_base.hpp  auction_item_plugin_base.hpp
as2_behaviors/as2_auction_behavior/launch/: auction_behavior_launch.py
as2_behaviors/as2_auction_behavior/plugins/coordinate_item/: CMakeLists.txt
as2_behaviors/as2_auction_behavior/plugins/coordinate_item/config/: default.yaml
as2_behaviors/as2_auction_behavior/plugins/coordinate_item/include/coordinate_item/: coordinate_item.hpp
as2_behaviors/as2_auction_behavior/plugins/coordinate_item/src/: coordinate_item.cpp
as2_behaviors/as2_auction_behavior/plugins/greedy_sequential/: CMakeLists.txt
as2_behaviors/as2_auction_behavior/plugins/greedy_sequential/config/: default.yaml
as2_behaviors/as2_auction_behavior/plugins/greedy_sequential/include/greedy_sequential/: greedy_sequential.hpp
as2_behaviors/as2_auction_behavior/plugins/greedy_sequential/src/: greedy_sequential.cpp
as2_behaviors/as2_auction_behavior/src/: auction_behavior.cpp  auction_behavior_node.cpp
as2_behaviors/as2_auction_behavior/tests/: CMakeLists.txt  auction_behavior_gtest.cpp
as2_ca/: CMakeLists.txt  package.xml
as2_ca/include/as2_ca/: ca_gateway.hpp  ca_gateway_client.hpp
as2_ca/launch/: ca_gateway_launch.py
as2_ca/src/: ca_gateway.cpp  ca_gateway_client.cpp  ca_gateway_node.cpp
as2_ca/tests/: CMakeLists.txt  as2_ca_client_gtest.cpp  as2_ca_gtest.cpp
as2_kb_interface/: CMakeLists.txt  package.xml
as2_kb_interface/include/as2_kb_interface/: kb_interface.hpp
as2_kb_interface/src/: kb_interface.cpp
as2_msgs/action/: Auction.action
as2_msgs/msg/: AuctionItem.msg  AuctionItemArray.msg  Bid.msg  InterAgentMessage.msg  LocalGenericMessage.msg  StartAuction.msg
as2_msgs/srv/: RegisterModule.srv
as2_python_api/as2_python_api/behavior_actions/: auction_handler.py
as2_python_api/as2_python_api/modules/: auction_module.py
as2_python_api/as2_python_api/test/modules/: test_auction_module.py
as2_state_interface/: CMakeLists.txt  package.xml
as2_state_interface/include/as2_state_interface/: state_interface.hpp
as2_state_interface/tests/: state_interface_gtest.cpp
